--- a/css/container/indexContainer.css
+++ b/css/container/indexContainer.css
@@ -6,7 +6,7 @@
 .container .inner-container .index {
   width: 100%;
   height: auto;
-  border: 1px solid;
+  /* border: 1px solid; */
 }
 
 .container .inner-container .index .sections {}
@@ -346,6 +346,7 @@
 
 .container .inner-container .index .sections .section.sec5 .sec-con .sec5-con {
   text-align: center;
+  flex: 0 1 520px;
   /* border: 1px solid; */
 }
 
@@ -357,26 +358,24 @@
 
 .container .inner-container .index .sections .section.sec5 .sec-con .sec5-con p {
   line-height: 12px;
-  padding: 20px 0;
+  padding: 30px 0;
   font-size: 12px;
 }
 
 .container .inner-container .index .sections .section.sec5 .sec-con .sec5-con span.foBtn {
   width: 100px;
-  display: block;
-  margin: 0 auto;
   background-color: rgb(0, 0, 0);
-  padding: 10px 20px;
+  padding: 10px;
   color: #fff;
+  margin: 0 auto;
   cursor: pointer;
   font-size: 14px;
-
+  letter-spacing: 3px;
 }
 
 .container .inner-container .index .sections .section.sec5 .sec-con .sec5-con span.foBtn:hover {
   color: #000;
   background-color: rgb(239, 239, 239);
-
   border: 1px solid;
   box-sizing: border-box;
 }
