--- a/css/common/footer.css
+++ b/css/common/footer.css
@@ -1,150 +1,27 @@
 /* footer */
-
-.footer {}
-
-.footer .inner-footer {
+.footer{
+  background-color: rgb(59, 59, 59);
+}
+.footer .inner-footer{
   display: flex;
   justify-content: center;
 }
-
-.footer .inner-footer .fcon {
-  flex: 0 1 1400px;
-  height: auto;
-  padding: 20px;
-  /* border: 1px solid; */
-  box-sizing: border-box;
+.footer .inner-footer .fcon{
+  flex: 0 1 980px;
+  height: 200px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  color: rgb(163, 163, 163);
 }
+.footer .inner-footer .fcon a{
+  text-decoration: underline;
+  color: rgb(163, 163, 163);
 
-.footer .inner-footer .fcon .left-fcon {
-  flex: 1;
-  padding: 10px;
+  padding: 0 10px;
+  font-size: 12px;
+  font-style: italic;
 }
-
-
-
-.footer .inner-footer .fcon .left-fcon p {
-  padding-top: 5px;
-  font-size: 1em;
-  line-height: 22px;
+.footer .inner-footer .fcon a:hover{
+color: rgb(255, 255, 255);
 }
-
-.footer .inner-footer .fcon .left-fcon p.p1 {
-  font-size: 0.8em;
-}
-
-.footer .inner-footer .fcon .center-fcon {
-  padding: 10px 30px;
-  box-sizing: border-box;
-  flex: 1;
-}
-
-
-.footer .inner-footer .fcon .center-fcon ul.con {
-  /* background-color: #ccc; */
-}
-
-.footer .inner-footer .fcon .center-fcon ul.con>li {
-  /* border: 1px solid; */
-  display: flex;
-  /* justify-content: space-between; */
-  padding: 20px 10px;
-  position: relative;
-}
-.footer .inner-footer .fcon .center-fcon ul.con>li:hover{
-  background-color: rgb(231, 231, 231);
-}
-.footer .inner-footer .fcon .center-fcon ul.con>li:nth-child(2)::before {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 1px;
-  background-color: rgb(200, 200, 200);
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-.footer .inner-footer .fcon .center-fcon ul.con>li img {
-  width: 50px;
-  height: 50px;
-  display: block;
-  /* border: 1px solid; */
-}
-
-.footer .inner-footer .fcon .center-fcon ul.con>li .rfoot {
-  flex: 1;
-  line-height: 20px;
-  padding: 5px 20px;
-  /* border: 1px solid; */
-  box-sizing: border-box;
-}
-.footer .inner-footer .fcon .center-fcon ul.con>li .rfoot h1{
-  font-size: 1.2em;
-}
-.footer .inner-footer .fcon .right-fcon {
-  flex: 1;
-  padding: 10px;
-  box-sizing: border-box;
-}
-
-.footer .inner-footer .fcon .right-fcon a {
-  background-color: rgb(47, 47, 47);
-  color: rgb(231, 231, 231);
-  padding: 0 5px;
-  line-height: 30px;
-  font-size: 0.8em;
-}
-
-.footer .inner-footer .fcon .right-fcon a:hover {
-  background-color: rgb(171, 171, 171);
-  color: #fff;
-}
-
-
-
-
-.footer .inner-footer .fcon h1.ftitle {
-  font-size: 1.2rem;
-  font-weight: lighter;
-  color: rgb(100, 100, 100);
-  padding: 20px 0;
-}
-
-span.sns{
-  font-weight: bold;
-  font-size: 1rem;
-  display: flex;
-  justify-content: flex-end;
-  padding: 5px;
-  /* transform: rotate(90deg); */
-}
-
-
-
-@media only screen and (max-width:959px) {
-
-
-
-
-  .footer .inner-footer .fcon {
-    flex-wrap: wrap;
-  }
-
-  .footer .inner-footer .fcon .left-fcon {
-    flex: 0 1 100%;
-  }
-
-  .footer .inner-footer .fcon .center-fcon {
-    flex: 0 1 100%;
-
-  }
-}
-
-.footer .inner-footer .fcon .right-fcon {
-  flex: 0 1 100%;
-
-}
-
-@media only screen and (max-width:640px) {}
