--- a/css/container/indexContainer.css
+++ b/css/container/indexContainer.css
@@ -84,24 +84,31 @@
 .container .inner-container .index .sections .section.sec2 .sec-con .img-con {
   position: relative;
   width: 100%;
-  height: 550px;
+  /* height: 550px; */
+  height: 29vw;
   /* min-height: 550px; */
+  transition: all 0.2s ease;
 }
 
-/* .container .inner-container .index .sections .section.sec2 .sec-con .img-con>ul{
+.container .inner-container .index .sections .section.sec2 .sec-con .img-con>ul{
   position: absolute;
   width: 100%;
-  height: 550px;
-} */
+  height: inherit;
+}
 .container .inner-container .index .sections .section.sec2 .sec-con .img-con>ul>li {
   position: absolute;
-
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: inherit;
 }
 
 .container .inner-container .index .sections .section.sec2 .sec-con .img-con>ul>li img {
   width: 100%;
-  height: auto;
+  height: inherit;
   display: block;
+  object-fit: cover;
+
 }
 
 .container .inner-container .index .sections .section.sec2 .sec-con .bcon {
@@ -246,24 +253,26 @@
 .container .inner-container .index .sections .section.sec4 .sec-con .img-con {
   position: relative;
   width: 100%;
-  height: 550px;
-  /* min-height: 550px; */
+  /* height: 550px; */
+  height: 29vw;
+  transition: all 0.2s ease;
 }
 
-/* .container .inner-container .index .sections .section.sec4 .sec-con .img-con>ul{
-  position: absolute;
+.container .inner-container .index .sections .section.sec4 .sec-con .img-con>ul{
   width: 100%;
-  height: 550px;
-} */
+  height: inherit;
+}
 .container .inner-container .index .sections .section.sec4 .sec-con .img-con>ul>li {
   position: absolute;
-
+  width: 100%;
+  height: inherit;
 }
 
 .container .inner-container .index .sections .section.sec4 .sec-con .img-con>ul>li img {
   width: 100%;
-  height: auto;
+  height: inherit;
   display: block;
+  object-fit: cover;
 }
 
 .container .inner-container .index .sections .section.sec4 .sec-con .center-btn {
@@ -378,4 +387,21 @@
   background-color: rgb(239, 239, 239);
   border: 1px solid;
   box-sizing: border-box;
+}
+
+
+
+
+@media only screen and (max-width:640px){
+  .container .inner-container .index .sections .section.sec4 .sec-con .bottom-con>ul{
+    flex-wrap: wrap;
+  }
+
+  .container .inner-container .index .sections .section.sec2 .sec-con .img-con{
+    height: calc( 100vw - 72px );
+
+  }
+  .container .inner-container .index .sections .section.sec4 .sec-con .img-con{
+    height: calc( 100vw - 72px );
+  }
 }
