--- a/css/common/footer.css
+++ b/css/common/footer.css
@@ -1,27 +1,65 @@
 /* footer */
+
 .footer{
-  background-color: rgb(59, 59, 59);
+  width: 100%;
+  height: auto;
+  border-top: 1px solid;
+  background-color: #fff;
 }
 .footer .inner-footer{
   display: flex;
   justify-content: center;
 }
 .footer .inner-footer .fcon{
-  flex: 0 1 980px;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: rgb(163, 163, 163);
+  flex: 1;
+  width: 100%;
+  height: 150px;
 }
-.footer .inner-footer .fcon a{
-  text-decoration: underline;
-  color: rgb(163, 163, 163);
+.footer .inner-footer .fcon .ftop-menu{
 
-  padding: 0 10px;
-  font-size: 12px;
-  font-style: italic;
 }
-.footer .inner-footer .fcon a:hover{
-color: rgb(255, 255, 255);
+.footer .inner-footer .fcon .ftop-menu>ul{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 5px;
 }
+.footer .inner-footer .fcon .ftop-menu>ul{
+  font-size: 0.9em;
+}
+
+.footer .inner-footer .fcon .fbottom-menu{
+  text-align: center;
+  /* border-top: 1px solid; */
+  transform: translateY(50%);
+}
+
+.footer .inner-footer .fcon .fbottom-menu h1.title a{
+  font-size: 1em;
+  
+}
+.footer .inner-footer .fcon .fbottom-menu p{
+  color: rgb(98, 98, 98);
+  cursor: pointer;
+  font-size: 0.8em;
+  padding-bottom: 2px;
+}
+.footer .inner-footer .fcon .fbottom-menu p:hover{
+  color: #000;
+}
+
+@media only screen and (max-width:800px){
+  .footer{
+    margin-top: 200px;
+    /* position: fixed; */
+    bottom: 0;
+  }
+  
+}
+
+@media only screen and (max-width:640px){
+  
+  .footer{
+    position: fixed;
+    bottom: 0;
+  }
+  }
